ubiquity (2.2.14) UNRELEASED; urgency=low

  * Update Kubuntu icon desktop/hi*-app-ubiquity.png for new logo

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 01 Apr 2010 23:08:48 +0100

ubiquity (2.2.13) lucid; urgency=low

  [ Evan Dandrea ]
  * In oem-config, support removing packages that were not part of the
    base install and are not needed in the final system by preseeding
    oem-config/remove_extras to true (LP: #315644, LP: #553184).

  [ Roman Shtylman ]
  * Kde_ui: 
    - fixed (LP: #550466) (LP: #550472) using kmessage box for quit dialog
    - fixed (LP: #540202) hide widgets until translated

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 01 Apr 2010 11:51:01 -0500

ubiquity (2.2.12) lucid; urgency=low

  [ Evan Dandrea ]
  * Accept and discard arguments to the KDE frontend's
    on_keyboard_layout_selected function (LP: #552399).

  [ Colin Watson ]
  * Fix pkgsel/ignore-incomplete-language-support check (LP: #527623).
  * KDE frontend:
    - Ensure that entries in extra_bar_frames are never None (LP: #536912).
    - Lock out manual partitioning operations while the partitioning backend
      is running (LP: #540203).
  * Don't lower-case the locale attribute on frontends.  This was added a
    long time ago; since then, it's become unnecessary since i18n.get_string
    lower-cases the locale itself, and it prevented us from finding
    slideshow files for language variants (LP: #476269).
  * Automatic update of included source packages: partman-auto 89ubuntu4,
    partman-ext3 58ubuntu2.

  [ Jonathan Riddell ]
  * Move oem-config-prepare-kde.desktop install directory to
    /usr/share/applications/kde4/, else it is labelled as a KDE 3
    application

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 01 Apr 2010 01:27:27 +0100

ubiquity (2.2.11) lucid; urgency=low

  [ Evan Dandrea ]
  * Get the slideshow dimensions from the slideshow.conf file as they
    now vary from distribution to distribution.